feat: update .env.example with Azure OpenAI configuration and deployment names

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,20 @@
-# Azure Search Configuration
+# Azure OpenAI Configuration (Required)
+VITE_AOAI_ENDPOINT=https://your-openai-resource.openai.azure.com/openai/deployments/your-model/chat/completions?api-version=2023-05-15
+VITE_AOAI_APIKEY=your-azure-openai-api-key
+
+# Azure OpenAI Deployment Names
+CHATCOMPLETION_DEPLOYMENTNAME=your-chat-model-deployment-name
+EMBEDDING_DEPLOYMENTNAME=your-embedding-model-deployment-name
+
+# MCP Server Configuration
+VITE_MCP_SERVER_URL=http://localhost:5000
+
+# Azure Search Configuration (Optional - for RAG capabilities)
+VITE_AZURE_SEARCH_ENDPOINT=https://your-search-service.search.windows.net
+VITE_AZURE_SEARCH_APIKEY=your-search-admin-key
 AZURE_SEARCH_ENDPOINT=https://your-search-service.search.windows.net
-AZURE_SEARCH_APIKEY=your-api-key-here
-AZURE_SEARCH_INDEX=articles
+AZURE_SEARCH_APIKEY=your-search-admin-key
+AZURE_SEARCH_INDEX=your-index-name
 
 # Server Configuration
 PORT=5001
