refactor: Update MCP server configuration and proxy settings across the application

--- a/.env.example
+++ b/.env.example
@@ -6,8 +6,10 @@ VITE_AOAI_APIKEY=your-azure-openai-api-key
 CHATCOMPLETION_DEPLOYMENTNAME=your-chat-model-deployment-name
 EMBEDDING_DEPLOYMENTNAME=your-embedding-model-deployment-name
 
-# MCP Server Configuration
-VITE_MCP_SERVER_URL=http://localhost:5000
+# MCP Server Configuration (Backend)
+# This is where your actual MCP server runs (backend communication only)
+# Frontend communicates via proxy server (typically port 5002)
+VITE_MCP_SERVER_URL=http://localhost:9090
 
 # Azure Search Configuration (Optional - for RAG capabilities)
 VITE_AZURE_SEARCH_ENDPOINT=https://your-search-service.search.windows.net
